--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
+
 </head>
 <body>
-  Instagram
+  <div class="container">
 
-  Capture and Share the World's Moments
+    <section class="section-left">
+      <img src="./images/phones.png" alt="Phones">
+    </section>
+    <section class="section-right">
+      <img src="./images/brand.png" alt="Instagram">
+      <nav>
+   <button id="home"><img src="./images/home.png" alt="Home"><span>Log In</span></button>
+      </nav>
+      <article>
+        <h1>Capture and Share<br>the World's Moments</h1>
+    <p>Instagram is a <span class="bolded">fast</span>, <span class="bolded">beautiful</span> and <span class="bolded">fun</span> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+      easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img src="./images/badge-iphone.png" alt="Download on the App Store">
+  <img src="./images/badge-android.png" alt="Get it on Google Play">
+  
+    </article>
+    </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </div>
+  <footer>
 
-  Oh yeah, did we mention it's free?
+<ul>
+  <li class="anchor-li"><a href="#"></a>About Us</li>
+  <li class="anchor-li"><a href="#"></a>Support</li>
+  <li class="anchor-li"><a href="#"></a>Blog</li>
+  <li class="anchor-li"><a href="#"></a>Press</li>
+  <li class="anchor-li"><a href="#"></a>API</li>
+  <li class="anchor-li"><a href="#"></a>Jobs</li>
+  <li class="anchor-li"><a href="#"></a>Privacy</li>
+  <li class="anchor-li"><a href="#"></a>Terms</li>
+  <li id="instagram-li">&copy; 2014 Instagram</li>
+</ul>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </footer>
+  
+  
 </body>
 </html>
