--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="top">
+df
+  </div>
+  <div class="main">
+    <div class="left">
+      <img src="images/phones.png" alt="">
+    </div>
+    <div class="right">
+      <div class="up">
+        <img src="images/brand.png" alt="">
+        <div><button><img src="images/home.png" alt=""> Log in</button></div>
+      </div>
+      <div class="down">
+        <h1>
+            Capture and Share the World's Moments
+          </h1>
+          <p>
+            fast, beautiful and fun way to share your life with friends and family.
+          <br><br>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br><br>
+            Oh yeah, did we mention it's free?
+          </p>
+            <div class="badge">
+                <a href="#"><img src="images/badge-iphone.png" alt=""></a>
+                <a href="#"><img src="images/badge-android.png" alt=""></a>
+            </div>
+      </div>
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<footer>
+<ul>
+  <li><a href="#">About Us</a></li>
+  <li><a href="#">Support</a></li>
+  <li><a href="#">Blog</a></li>
+  <li><a href="#">Press</a></li>
+  <li><a href="#">API</a></li>
+  <li><a href="#">Jobs</a></li>
+  <li><a href="#">Privacy</a></li>
+  <li><a href="#">Terms</a></li>
+  <li>&copy; 2014 Instagram</li>
+</ul>
+ 
+</footer>
 </body>
 </html>
