--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,21 +5,23 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div id="fullpic">
+<div class="fullbox">
    <div class="box-left">
  <img src="images/phones.png" alt="phones pic">
   </div>
-  <div class="box-right box-text">
+  <div class="box-right ">
     <img src="images/brand.png" alt="brand pic">
+      <article class="frame-img">
     <h2>Capture and Share the World's Moments</h2>
-
+   
   <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
   <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
   <p>Oh yeah, did we mention it's free?</p> 
-  Download on the App Store
-  Get it on Google Play
+  <img src="images/badge-iphone.png" alt="iphone pic">
+  <img src="images/badge-android.png" alt="android">
+</article>
   </div>
   
  </div>
