--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,72 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+      <img src="images/brand.png" alt="Instagram-logo">
+  </header>
+  
+  <section class="section-insta">
 
-  Capture and Share the World's Moments
+    <div class="section-1">
+      <img src="images/phones.png" alt="Instagram devices">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="section-2">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <h2>
+          Capture and Share the World's Moments
+      </h2>
+    
+      <p>
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </p>
 
-  Oh yeah, did we mention it's free?
+      <p>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>
+      Oh yeah, did we mention it's free?
+      </p>
+    </div>
+  </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  <div class="download">
+  <a href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.signupPage.badge&mt=8&vt=lo">
+   <img src="images/badge-iphone.png" alt="Download on the App Store">
+  </a>
+
+  <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3DW4qL6wAEAAF8Hb9b32w98WT1qg8f%26utm_content%3Dlo%26utm_medium%3Dbadge">
+   <img src="images/badge-android.png" alt="Get it on Google Play">
+  </a>
+  </div>
+  
+  
+
+  <nav class="nav-end">
+
+    <ul class="nav-item-1">
+      <li class="navigator-links"><a href="#">About Us</a></li>
+      <li class="navigator-links"><a href="#">Support</a></li>
+      <li class="navigator-links"><a href="#">Blog</a></li>
+      <li class="navigator-links"><a href="#">Press</a></li>
+      <li class="navigator-links"><a href="#">API</a></li>
+      <li class="navigator-links"><a href="#">Jobs</a></li>
+      <li class="navigator-links"><a href="#">Privacy</a></li>
+      <li class="navigator-links"><a href="#">Terms</a></li>  
+    </ul>
+
+    <div class="nav-item-2">
+        &copy; 2014 Instagram
+    </div>
+
+  </nav>    
+
+
 </body>
 </html>
