--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="../starter-code/css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div id="todo">
+  <div id="logo">
+  <img src="../starter-code/images/brand.png">
+  <button class="adentro"> <img src="../starter-code/images/home.png">Log In</button>
+  </div>
+  <div id="textos">
+  <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+  <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. </br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  Take a picture or video, choose a filter to transform its look </br>    and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </br>Oh yeah, did we mention it's free?</p>
+  </div>
+  <div id="iphones">
+  <img src="../starter-code/images/phones.png">
+  </div>
+  <div id="ultimo">
+  <img src="../starter-code/images/badge-iphone.png">
+  <img src="../starter-code/images/badge-android.png">
+  </div>
+  </div>
 
-  Oh yeah, did we mention it's free?
+<footer>
+  About Us      Support      Blog      Press     API     Jobs      Privacy      Terms
+</footer>
+  <div id="copy">&copy; 2014 Instagram</div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
