Pagina casi terminada

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+  <meta charset="UTF-8">
   <title>Instagram</title>
+
 </head>
+
 <body>
-  Instagram
+    <header>
+        <img src = "images/brand.png" class = "instagram">
+        <a class="link-btn" href="#"><img src = "images/home.png"><b>Log in </b></a>  
+    </header>
 
-  Capture and Share the World's Moments
+    <div class = "phones">
+      <img src = "images/phones.png">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class = "cuadro-de-texto">
+        <h2><strong>Capture and Share<br> the World's Moments</strong></h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+        <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; 
+          it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p><br>
+        <a href = "#" target = "_new"><img src ="images/badge-iphone.png"></a>
+        <a href = "#" target = "_new"><img src = "images/badge-android.png"></a>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+      <footer>
 
-  Download on the App Store
-  Get it on Google Play
+            <ul class="f-bar-ul">
+              <li class="f-bar-li"><a class="f-bar-item" href="#" target = "_new"><b>ABOUT US</b></a></li>
+              <li class="f-bar-li"><a class="f-bar-item" href="#" target = "_new"><b>SUPPORT</b></a></li>
+              <li class="f-bar-li"><a class="f-bar-item" href="#" target = "_new"><b>BLOG</b></a></li>
+              <li class="f-bar-li"><a class="f-bar-item" href="#" target = "_new"><b>PRESS</b></a></li>
+              <li class="f-bar-li"><a class="f-bar-item" href="#" target = "_new"><b>API</b></a></li>
+              <li class="f-bar-li"><a class="f-bar-item" href="#" target = "_new"><b>JOBS</b></a></li>
+              <li class="f-bar-li"><a class="f-bar-item" href="#" target = "_new"><b>PRIVACY</b></a></li>
+              <li class="f-bar-li"><a class="f-bar-item" href="#" target = "_new"><b>TERMS</b></a></li>
+              <li class="f-bar-li">2014 INSTAGRAM</li>
+            </ul>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </footer>
 
-  &copy; 2014 Instagram
 </body>
 </html>
