--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,7 +9,10 @@
   <div>
     <img src="images/brand.png" id="logo" alt="">
     <section class="azul"></section>
- 
+    <div class="login">
+      <img src="images/home.png" class="home">
+    <b><p class="lg">Log in</p> </b> 
+    </div>
     
     <img src="images/phones.png" alt="celular" id="cel">
     <article>
