--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,45 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-  Instagram
+  <div id="bigcontainer">
+      <div id="fondoazul">
+      </div>
+    <div id="rightcontainer">
+          <div id="brand">
+              <img src="images/brand.png" alt="brand.png ">
+          </div>
+  <div id="frame">
+      <img src="images/frame.png" alt="frame" width="500vw">
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+  </div>
+<div id="mensaje">
+    Instagram
+  
+    Capture and Share the World's Moments
+  
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
+    Oh yeah, did we mention it's free?
+  
+    Download on the App Store
+    Get it on Google Play
+  
+    About Us
+    Support
+    Blog
+    Press
+    API
+    Jobs
+    Privacy
+    Terms
+  </div>
+</div>
   &copy; 2014 Instagram
+</div>
 </body>
 </html>
