--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -41,7 +41,7 @@
               <li class="f-bar-li"><a class="f-bar-item" href="#" target = "_new"><b>JOBS</b></a></li>
               <li class="f-bar-li"><a class="f-bar-item" href="#" target = "_new"><b>PRIVACY</b></a></li>
               <li class="f-bar-li"><a class="f-bar-item" href="#" target = "_new"><b>TERMS</b></a></li>
-              <li class="f-bar-li">2014 INSTAGRAM</li>
+              <li class="f-bar-li"> &copy 2014 INSTAGRAM</li>
             </ul>
 
     </footer>
