--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <header></header>
 
-  Capture and Share the World's Moments
+    <img class="phones" src="images/phones.png" alt="Phones" />
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="content">
+      <div class="content-header">
+        <div>
+          <img class="brand" src="images/brand.png" alt="Instagram" />
+          <span class="home">
+            <img src="images/home.png" alt="Home" />
+            Log in</span>
+        </div>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      <div class="content-main">
+        <h1>Capture and Share<br />the World's Moments</h1>
+        <p>
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          friends and family.<br /><br />Take a picture or video, choose a filter to
+          transform its look and feel, then post to Instagram &mdash; it's that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a
+          new way to see the world.<br /><br /> Oh yeah, did we mention it's free?
+        </p>
+        
+      </div>
+      <div class="stores">
+          <img src="images/badge-iphone.png" alt="Download on the App Store" />
+          <img src="images/badge-android.png" alt="Get it on Google Play" />
+        </div>
+    </div>
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+      <span class="copy">&copy; 2014 Instagram</span>
+    </footer>
+  </body>
 </html>
