todo listo :D ahora si

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -42,7 +42,7 @@
           
             
     </article>
-    <footer>
+    <footer> <b>
       <ul>
         <li>About Us </li>
         <li>Support   </li>
@@ -51,9 +51,10 @@
         <li>API  </li>
         <li>Jobs  </li>
         <li>Privacy  </li>
-        <li>Terms   </li>
-        &copy; 2014 Instagram
+        <li>Terms                         </li>
+         <span id="if"> &copy; 2014 Instagram </span> 
       </ul>
+    </b>
     </footer>
   </div>
   
