--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div class = "container">
     <header>
         <img src = "images/brand.png" class = "instagram">
         <a class="link-btn" href="#"><img src = "images/home.png"><b>Log in </b></a>  
@@ -28,7 +29,7 @@
         <a href = "#" target = "_new"><img src ="images/badge-iphone.png"></a>
         <a href = "#" target = "_new"><img src = "images/badge-android.png"></a>
     </div>
-
+</div>
 
       <footer>
 
