--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,68 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="bg-image">
+    <div class="container">
+      <div class="content">
+        <div class="phones">
+          <img src="./images/phones.png" alt="Phones">
+        </div>
+        <div class="description-container">
+          <div class="log-in">
+            <img src="./images/brand.png" alt="Instagram">
+            <a href="">
+              <img src="./images/home.png" alt="Home Button">
+              <strong>Log in</strong>
+            </a>
+          </div>
+          <div class="description">
+            <img src="./images/frame.png" alt="Brand">
+            <div class="description-text">            
+              <h1>Capture and Share the World's Moments</h1>
+              <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </div>
+          </div>
+          <div class="badges">
+              <img src="./images/badge-iphone.png" alt="Badge iPhone">
+              <img src="./images/badge-android.png" alt="Badge Android">
+          </div>
+        </div>
+      </div>
+      <div class="links">
+        <ul>
+          <li>
+            <a href="">About Us</a>
+          </li>
+          <li>
+            <a href="">Support</a>    
+          </li>
+          <li>
+            <a href="">Blog</a>  
+          </li>
+          <li>
+            <a href="">Press</a>        
+          </li>
+          <li>
+            <a href="">API</a>     
+          </li>
+          <li>
+            <a href="">Jobs</a>   
+          </li>
+          <li>
+            <a href="">Privacy</a> 
+          </li>
+          <li>
+            <a href="">Terms</a>  
+          </li>
+          <li class="copy">&copy; 2014 Instagram</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
