I aligned everything the best way possible, I missed getting the button styled correctly and the buttons do not link to anywhere. Aside from that I have trouble understanding the positions and spaces

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="top-container">
+        <div class="half-top-box"></div>
+      </div>
+      <div class="left-box">
+        <img src="images/phones.png" alt="" />
+      </div>
+      <div class="right-box">
+        <div class="title-box">
+          <img src="images/brand.png" alt="" />
+          <!-- 
+          <button><img src="images/home.png" alt="" /> Log in</button>
+           -->
+          <div class="title-text">
+            <a src=""> <img src="images/home.png" alt="" /> Log in</a>
+          </div>
+        </div>
+        <div class="frame-box">
+          <img src="images/frame.png" alt="" />
+          <div class="frame-text">
+            <h1>Capture and Share <br />the World's Moments</h1>
+            Instagram is a <strong>fast, beautiful</strong> and
+            <strong>fun</strong> way to share your life with friends and
+            family.<br /><br />
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world. <br /><br />
+            Oh yeah, did we mention it's free?
+          </div>
+        </div>
+        <div class="phone-logos">
+          <img src="images/badge-iphone.png" alt="" />
+          <img src="images/badge-android.png" alt="" />
+        </div>
+      </div>
+    </div>
+    <footer>
+      About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram
+    </footer>
+  </body>
 </html>
