--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,49 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css"  href= "./css/main.css">
 </head>
+
 <body>
-  Instagram
+<div id= "background">
+  
+ <img src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/starter-code/images/brand.png?raw=true" alt="Instagram-logo" class="i-l" />
+  
+  <img src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/starter-code/images/phones.png?raw=true" alt="Instagram-logo" class="i-p" /> 
+  <div class= "box">
+    
+  <button id= "text"><img src='https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/starter-code/images/home.png?raw=true ' alt='icon'>        Log in</button>
+  </div>
+  
+  <div class= "container">
+   
+  <h1 > Capture and Share<br> the World's Moments</h1>
 
-  Capture and Share the World's Moments
+   <p  class="i-f">  Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+<p  class="i-f"> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <p  class="i-f">Oh yeah, did we mention it's 
+   free?</p> 
+ 
+   <img src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/starter-code/images/badge-iphone.png?raw=true" alt="Instagram-ios" class="i-ios" />
+   <img src="https://github.com/ironhack-labs/lab-css-instagram-clone/blob/master/starter-code/images/badge-android.png?raw=true" alt="Instagram-android" class="i-android" />
+ 
+  
+  </div>
+</div>
 </body>
+<footer>
+  <nav>  
+     <b> <span class= "space">ABOUT US </span>
+        <span class= "space">SUPPORT </span>
+          <span class= "space">BLOG </span>
+         <span class= "space">PRESS </span>
+         <span class= "space">API </span>
+        <spann class= "space">TERMS </span>
+        <span class= "space" id="color-copy">&copy 2014 INSTAGRAM </span>
+        </b>
+   
+  </nav>
+</footer>
+
 </html>
