--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet"  href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <img id= "brand" src="./images/brand.png" alt="">
+  <div id="log-in-button"> Log in</div>
+  <img id="log-in" src="./images/home.png" alt="">
+ 
+  <div id="blue-square">
+ 
+  <div id= "back-image">
 
-  Capture and Share the World's Moments
+   <h1 id="h1-cpture">Capture and Share<br> the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p> Instagram is a  <strong> fast, beautiful</strong> and <strong>fun </strong>way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free?</p>
+</div>
+<img id= "phone" src="./images/phones.png" alt=""></div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<img id="iphone" src="./images/badge-iphone.png" alt="">
+<img id="android" src="./images/badge-android.png" alt="">
+</div>
+ <footer>
+  <nav>
+<span> <a href="">About Us</a></span>
+<span> <a href=""> Support</a></span>
+<span><a href="">Blog</a></span>
+<span><a href="">Press</a></span>
+<span><a href="">API</a></span>
+<span><a href="">Jobs</a></span>
+<span><a href="">Privacy</a></span>
+<span><a href="">Terms</a></span>
+<span id= "copy-right"> &copy; 2014 Instagram</span>
+</nav>
+</footer>
+</div>
 </body>
 </html>
