--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,60 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
+    <div id="half">
+    
+<div id= "everything2">
+    <img id="phones" src="/Users/alejandrogalvezrico/Documents/Ironhack/Week1/day3/lab-css-instagram-clone/starter-code/images/phones.png" alt="phones">
 
-  Capture and Share the World's Moments
+<div>
+<img src="/Users/alejandrogalvezrico/Documents/Ironhack/Week1/day3/lab-css-instagram-clone/starter-code/images/brand.png" alt="brand.png">  
+<img src="/Users/alejandrogalvezrico/Documents/Ironhack/Week1/day3/lab-css-instagram-clone/starter-code/images/home.png" alt="Home">
+Log In
+</div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div id="principal">
+  <span id="title">Capture and Share <br>the World's Moments</span>
+  <br>
 
+  <br>
+  Instagram is a <span class= "bold">fast, beautiful</span> and <span class= "bold"> fun </span> way to share your life 
+  <br>
+   with friends and family. 
+  <br>
+  <br>
+  Take a picture or video, choose a filter to transform its look
+  <br>
+   and feel, then post to Instagram &mdash; it's that easy. You can
+   <br>
+    even share to Facebook, Twitter, Tumblr and more. It's a
+    <br>
+     new way to see the world.
+  <br>
   Oh yeah, did we mention it's free?
+</div>
+<br>
+<br>
+<div>
+  <img src="/Users/alejandrogalvezrico/Documents/Ironhack/Week1/day3/lab-css-instagram-clone/starter-code/images/badge-iphone.png" alt="Download on the App Store">
+<img src="/Users/alejandrogalvezrico/Documents/Ironhack/Week1/day3/lab-css-instagram-clone/starter-code/images/badge-android.png" alt="Get it on Google Play">
+</div>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div id = "bottom">
+About Us
+Support
+Blog
+Press
+API
+Jobs
+Privacy
+Terms
+&copy; 2014 Instagram
+</div>
+</div>
 </body>
 </html>
