--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,36 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div id="heading">
+    <img id="insta" src="./images/brand.png">
+    <div id="button"><img src="./images/home.png"><a href="#"> Log In</a></div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img id="phone" src="./images/phones.png">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div id="content">
+    <h1>Capture and Share <br>the World's Moments</h1>
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+    <img id="apple" src="./images/badge-iphone.png">
+    <img id="google" src="images/badge-android.png">
+  </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="footer">
+    <a href="#">About Us</a>
+    <a href="#">Support </a>
+    <a href="#">Blog </a>
+    <a href="#">Press </a>
+    <a href="#">API </a>
+    <a href="#">Jobs </a>
+    <a href="#">Privacy </a>
+    <a href="#">Terms </a>
+    <span id="copy">&copy; 2014 Instagram</span>
+  </div>
 </body>
 </html>
