--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,30 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href= "./css/main.css">
   <title>Instagram</title>
 </head>
+<div>
+
+</div>
 <body>
-  Instagram
+ 
+ <img src="C:\Users\rabbi\Desktop\ironHack\daily_excercises\lab-css-instagram-clone\starter-code\images\phones.png" alt="phones">
 
-  Capture and Share the World's Moments
+ <div>
+   <img src="C:\Users\rabbi\Desktop\ironHack\daily_excercises\lab-css-instagram-clone\starter-code\images\brand.png" alt="brand">
+ </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+ <div>
+   <img src="C:\Users\rabbi\Desktop\ironHack\daily_excercises\lab-css-instagram-clone\starter-code\images\home.png" alt="home">
+ </div>
+<div class="Capture">
+ <p> Capture and Share the World's Moments </p>
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+ <p> Instagram is a fast, beautiful and fun way to share your life with friends and family. </p>
 
-  Oh yeah, did we mention it's free?
+ <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
 
-  Download on the App Store
-  Get it on Google Play
+ <p> Oh yeah, did we mention it's free? </p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+ 
+ <img src="C:\Users\rabbi\Desktop\ironHack\daily_excercises\lab-css-instagram-clone\starter-code\images\badge-iphone.png" alt="iphone">
+
+
+ <img src="C:\Users\rabbi\Desktop\ironHack\daily_excercises\lab-css-instagram-clone\starter-code\images\badge-android.png" alt="android">
+
+ <div>
+
+ </div>
+  <nav>
+ <span> About Us </span>
+ <span> Support </span>
+ <span> Blog </span>
+ <span> Press </span>
+ <span> API </span>
+ <span> Jobs </span>
+ <span> Privacy </span> 
+ <span> Terms </span>
+  </nav>
 
   &copy; 2014 Instagram
 </body>
