se hizo grandeeeeeee

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,36 +11,36 @@
     <div id="rightcontainer">
           <div id="brand">
               <img src="images/brand.png" alt="brand.png ">
+              <span id="home">
+                  <img src="images/home.png" alt="Home" />
+                  Log in</span>
           </div>
   <div id="frame">
-      <img src="images/frame.png" alt="frame" width="500vw">
+      <img src="images/frame.png" alt="frame" width="560vw">
 
   </div>
 <div id="mensaje">
-    Instagram
-  
-    Capture and Share the World's Moments
-  
-    Instagram is a fast, beautiful and fun way to share your life with friends and family.
-  
-    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-  
-    Oh yeah, did we mention it's free?
-  
-    Download on the App Store
-    Get it on Google Play
-  
-    About Us
-    Support
-    Blog
-    Press
-    API
-    Jobs
-    Privacy
-    Terms
+    <h1>Capture and Share<br /> the World's Moments</h1>
+        <p>
+          Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          friends and family.<br /><br />Take a picture or video, choose a filter to
+          transform its look and feel, then post to Instagram &mdash; it's that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a
+          new way to see the world.<br /><br /> Oh yeah, did we mention it's free?
+        </p>
   </div>
+    <div id="descarga">
+        <img src="images/badge-iphone.png" alt="ios.png" > &nbsp;
+        <img src="images/badge-android.png" alt="android.png" >
+    </div>
+
 </div>
-  &copy; 2014 Instagram
+<div id="leftcontainer">
+    <div id="telefono">
+        <img src="images/phones.png" alt="telefono.png" width="355vw">
+    </div>
+</div>
+
 </div>
 </body>
 </html>
