dejo de ser grandeeee ya quedo

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,7 +10,7 @@
       </div>
     <div id="rightcontainer">
           <div id="brand">
-              <img src="images/brand.png" alt="brand.png ">
+              <img src="images/brand.png" alt="brand.png " width="325">
               <span id="home">
                   <img src="images/home.png" alt="Home" />
                   Log in</span>
@@ -42,5 +42,18 @@
 </div>
 
 </div>
+<footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+    <span class="copy">&copy; 2014 INSTAGRAM</span>
+  </footer>
 </body>
 </html>
