--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<div id="the-blue-one"></div>
+<div id="middle-part">
+<div id="phones"><img src="images/phones.png" alt="two-phones-"></div>
+<div id="text-content">
+  <div id="brand-login">
+    <div id="brand"><img src="images/brand.png" alt="Instagram"></div>
+    <button id="login"><img src="images/home.png" alt="home-symbol"><span id="login-text">Log In</span></button></div>
+    <div id="white-bg"><p>Capture and Share the World's Moments</p>
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+    <div id="download-cta">
+        <a href="#"><img src="images/badge-iphone.png"></a>
+        <a href="#"><img src="images/badge-android.png"></a>
+      </div>
+  
+  </div>
+  
+</div>
+</div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer id="#footer">
+  <ul>
+  <li class="blue-element">About Us</li>
+  <li class="blue-element">Support</li>
+  <li class="blue-element">Blog</li>
+  <li class="blue-element">Press</li>
+  <li class="blue-element">API</li>
+  <li class="blue-element">Jobs</li>
+  <li class="blue-element">Privacy</li>
+  <li class="blue-element">Terms</li>
+  <li class="grey-element">&copy; 2014 Instagram</li>
+</ul>
+</footer>
 </body>
 </html>
