--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div class="main-container">
+      <div class="phones box">
+        <img src="images/phones.png" alt="phones" />
+      </div>
 
-  Capture and Share the World's Moments
+      <div class="right-content box">
+        <div class="header">
+          <div>
+          <img src="images/brand.png" alt="Instagram-brand" /> </div>
+          
+         <div>
+           <button><a href="#"><img src="images/home.png" alt="home-icon"/><span>Log in</span></a> </button>
+         </div>
+        </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="capture-text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.
+          </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook,Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
 
-  Oh yeah, did we mention it's free?
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="badges">
+          <img src="images/badge-iphone.png" alt="badge-iphone" />
+          <img src="images/badge-android.png" alt="badge-android" />
+        </div>
+      </div>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <div>
+      <ul class="footer">
+        <li><a href="#" class="list-item">ABOUT US</a></li>
+        <li><a href="#" class="list-item">SUPPORT</a></li>
+        <li><a href="#" class="list-item">BLOG</a></li>
+        <li><a href="#" class="list-item">PRESS</a></li>
+        <li><a href="#" class="list-item">API</a></li>
+        <li><a href="#" class="list-item">JOBS</a></li>
+        <li><a href="#" class="list-item">PRIVACY</a></li>
+        <li><a href="#" class="list-item">TERMS</a></li>
+        <li>&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </div>
+  </body>
 </html>
