--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div class="header"></div>
+    <div class="content-container">
+      <div class="phone-phrame">
+        <img src="images/phones.png" alt="" />
+      </div>
+      <div class="landing-container">
+        <div class="brand-container">
+          <img src="images/brand.png" alt="" />
+          <div class="login-button">
+            <img class="home-icon" src="images/home.png" alt="" />
+            <p>Log in</p>
+          </div>
+        </div>
+        <div class="content-section">
+          <h3>
+            Capture and Share the <br />
+            World's Moments
+          </h3>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          Download on the App Store Get it on Google Play About Us Support Blog
+          Press API Jobs Privacy Terms &copy; 2014 Instagram
+          <div class="download-button-container">
+            <img src="images/badge-android.png" alt="" />
+            <img src="images/badge-iphone.png" alt="" />
+          </div>
+        </div>
+      </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      <footer>
+        <ul>
+          <li><a href="#" class="href">About Us</a></li>
+          <li><a href="#" class="href">Support</a></li>
+          <li><a href="#" class="href">Blog</a></li>
+          <li><a href="#" class="href">Press</a></li>
+          <li><a href="#" class="href">API</a></li>
+          <li><a href="#" class="href">Jobs</a></li>
+          <li><a href="#" class="href">Privacy</a></li>
+          <li><a href="#" class="href">Terms</a></li>
+        </ul>
+      </footer>
+    </div>
+  </body>
 </html>
