--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,79 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="mainFlex">
+    <div class="subFlex1">
+      <section class = "header">
+        <img 
+          class ="brand"
+          src = "/labs/lab-css-instagram-clone/starter-code/images/brand.png" 
+          alt = "Instagram Logo">
+        <button type = "submit" class = "login" >
+          <img 
+          src = "/labs/lab-css-instagram-clone/starter-code/images/home.png" 
+          alt = "home icon"
+          id = "icon"
+          > Log in
+        </button>
+      </section>
+      <section class = "main">
+        <h1>
+          Capture and Share 
+          <br> the World's Moments
+        </h1>
+        <div class = "content">
+          <p>
+            Instagram is a 
+              <span><strong>fast</strong></span>, 
+              <span><strong>beautiful</strong></span> 
+              and <span><strong>fun</strong></span> 
+              way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="stores">
+          <img 
+            src="/labs/lab-css-instagram-clone/starter-code/images/badge-iphone.png" 
+            alt="Apple Store" 
+            class="link">
+          <img 
+            src = "/labs/lab-css-instagram-clone/starter-code/images/badge-android.png" 
+            alt = "Google Play" 
+            class = "link">
+        </div>
+      </section>
+    </div>
+    <section class = "screenshot subFlex2">
+      <img 
+        src = "/labs/lab-css-instagram-clone/starter-code/images/phones.png" 
+        alt = "Phone Screenshot"
+        >
+    </section>
+  </div>
+  <section class="footer">
+      <ol class = "footer-li">
+          <li>About us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ol>
+      <p>
+        &copy; 2014 Instagram
+      </p>
+  </section>
 </body>
 </html>
