--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+    <div class="flex-box">
+      <div class="content-row">
+        <div class="image-column-wrapper">
+          <img src="images/phones.png">
+        </div>
+        <div class="content-column-wrapper">
+          <div class="content-row-1">
+            <img src="images/brand.png">
+            <button>
+              <img src="images/home.png">
+              <span>Log In</span>
+            </button>
+          </div>
+          <div class="content-row-2">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="download-buttons">
+              <img src="images/badge-iphone.png">
+              <img src="images/badge-android.png">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+        <a>About Us</a>
+        <a>Support</a>
+        <a>Blog</a>
+        <a>Press</a>
+        <a>API</a>
+        <a>Jobs</a>
+        <a>Privacy</a>
+        <a>Terms</a>
+        <span>&copy; 2014 Instagram</span>     
+    </div>
+  </div>
 </body>
 </html>
