--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <!-- Instagram -->
+  <div class="main-content">
+    <div class="left-wrapper">
+      <img src="./images/phones.png" alt="phones">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="right-wrapper">
+      <div class="top-menu">
+        <img src="./images/brand.png" alt="brand">
+        <div class="home-wrapper">
+          <button>
+            <a href="#">
+              <img src="./images/home.png" alt="home-icon" />
+              <span>Log in</span>
+            </a>
+          </button>
+        </div>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="content">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="stores">
+          <img src="./images/badge-iphone.png">
+          <img src="./images/badge-android.png">
+        </div>
+      </div>
+    </div>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="footer">
+    <div class="nav-footer">
+      <a href="#">ABOUT US</a>
+      <a href="#">SUPPORT</a>
+      <a href="#">BLOG</a>
+      <a href="#">PRESS</a>
+      <a href="#">API</a>
+      <a href="#">JOBS</a>
+      <a href="#">PRIVACY</a>
+      <a href="#">TERMS</a>
+    </div>
+    <div class="copyRight">
+      <p>&copy; 2014 INSTAGRAM</p>
+    </div>
+  </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
