--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <main class="main">
+    <div class="phones">
+      <figure>
+        <img src="images/phones.png" alt="Two phones">
+      </figure>
+    </div>
+    <div class="content">
+      <nav class="home">
+        <figure>
+          <img src="images/brand.png" alt="Instagram Logo" />
+        </figure>
+        <button type="submit" target="" class="home-btn"><img src="images/home.png">Log in</button>
+      </nav>
+      <section class="description">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your
+          life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <div class="stores">
+          <span>
+            <img src="images/badge-iphone.png" alt="Download on the App Store" />
+          </span>
+          <span>
+            <img src="images/badge-android.png" alt="Get it on Google Play" />
+          </span>
+        </div>
+      </section>
+    </div>
+  </main>
+  <footer class="footer">
+    <ul class="bottom-links">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    <span>&copy; 2014 Instagram</span>
+  </footer>
 </body>
+
 </html>
