--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,58 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" media="(media-features)" href="./css/main.css" />
 </head>
 <body>
-  Instagram
+  <!-- <header></header> -->
+  <section>
+    <figure >
+      <img src="./images/phones.png" alt="Celulares mostrando o Instagram" class="celular">
+    </figure>
+    <div class="masterright">
 
-  Capture and Share the World's Moments
+      <div class="right1">
+        <figure>
+          <img src="./images/brand.png" alt=" Logo da Marca do Instagram">
+        </figure>
+        <button> <img src="./images/home.png" alt=""> <strong>Log in</strong></button>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="frame">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, 
+          then post to Instagram &mdash; it's that easy. 
+          You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="right2">
+        <figure>
+          <a href=""> <img src="./images/badge-iphone.png" alt="Download na Apple Store"> </a>
+        </figure>
+        <figure>
+          <a href=""> <img src="./images/badge-android.png" alt="Download na Google Store"></a>
+        </figure>
+      </div>
 
-  Oh yeah, did we mention it's free?
+    </div>
+  </section>
+  <footer> 
+  <div>
+    <a href="#">  About Us</a>
+    <a href="#"> Support</a>
+    <a href="#"> Blog</a>
+    <a href="#"> Press</a>
+    <a href="#"> API</a>
+    <a href="#"> Jobs</a>
+    <a href="#"> Privacy</a>
+    <a href="#"> Terms</a>
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+   <p>&copy; 2014 Instagram</p> 
+  </footer>
 </body>
 </html>
