--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div id="div-general">
+    <figure id="div-left-side">
+      <img src="images/phones.png" alt="Two cellphone, an Iphone over an Android with Instagram application oppened">
+    </figure>
 
-  Capture and Share the World's Moments
+    <div id="div-right-side">
+      <div id="div-logo">
+        <img src="images/brand.png" alt="Instagram Logo, which is a camera like a polaroid and the name Instagram">
+        <button id="btn-log-in" type="submit">
+          <img src="images/home.png">Log In
+        </button>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div id="text-content">
+        <div>
+          <h2>Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <p>Instagram is a <strong>fast</strong> , <strong>beautiful </strong>and <strong>fun</strong> way to share
+            your
+            life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <div id="buttons">
+          <button class="button-stores" type="submit">
+            <img src="images/badge-iphone.png">
+          </button>
+          <button class="button-stores" type="submit">
+            <img src="images/badge-android.png">
+          </button>
 
-  &copy; 2014 Instagram
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div id="div-list">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li><span>&copy; 2014 Instagram</span></li>
+    </ul>
+  </div>
+
 </body>
+
 </html>
