--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="content">
+    <div class="content-picture">
+      <img src="./images/phones.png" alt="Instagram running on two mobile devices, an Apple iPhone 5 on top of an Android device">
+    </div>
+    <div class="content-text">
+      <div class="header-div">
+          <a href="#"><img src="images/brand.png" class="image-logo" alt="Instagram logo"></a>
+          <a href="#" class="login-btn-a"><button class="login-btn"><img src="./images/home.png" alt="Login button - home icon"><span class="login-btn-text">Log in</span></button></a>
+      </div>
+      <div class="content-text-description">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>
+        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        </p>
+        <p>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+        Oh yeah, did we mention it's free?
+        </p>
+        <div class="store-btns">
+          <img src="images/badge-iphone.png" alt="Button for App Store download">
+          <img src="images/badge-android.png" alt="Button for Google Play download">
+        </div>
+      </div>
+    </div>
+  </div>
+      <div class="footer">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </div>
 </body>
 </html>
