--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>Instagram</title>
+  </head>
+  <body>
+    <div class="container">
+      <figure>
+        <img src="./images/phones.png" alt="">
+      </figure>
+      <div class="content">
+        <div class="header-content">
+          <span class="logo">
+            <img src="./images/brand.png" alt="">
+          </span>
+          <button type="button" class="button btn-app">Log in</button>
+        </div>
+        <section>
+          <h1>Capture and Share<br ∕>the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </section>
+        <a href="#"><img src="./images/badge-android.png" alt="Get it on Google Play" class="app"></a>
+        <a href="#"><img src="./images/badge-iphone.png" alt="Download on the App Store"></a>
+      </div>
+      <div class="clearfix"></div>
+      <footer class="footer">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+    </div>
+  </body>
 </html>
