--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Instagram Copy</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <main class="full-wrapper">
+      <!--Mobile images-->
+      <figure>
+        <img src="images/phones.png" alt="available devices" />
+      </figure>
+      <div class="col">
+        <!-- Brand and sign in-->
+        <div class="logos">
+          <img
+            id="instagram-brand"
+            src="images/brand.png"
+            alt="instagram logo"
+          />
+          <button>
+            <img src="images/home.png" alt="home icon" />
+            <a href="#"> Log in</a>
+          </button>
+        </div>
+        <!-- Box content-->
+        <div class="full-content">
+          <h1>Capture and Share<br />the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <!-- App stores-->
+        <div class="images-box">
+          <a href=""><img src="images/badge-iphone.png" alt="iphone store"/></a>
+          <a href="">
+            <img src="images/badge-android.png" alt="android store"
+          /></a>
+        </div>
+      </div>
+    </main>
+    <!-- Footer and bottom nav-->
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">&copy; 2014 Instagram</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
