--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="header-bg"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <main>
+    <div class="content-container">
+      <figure>
+        <img src="images/phones.png" alt="two phones with editing photo with filters screen in Instagram app.">
+      </figure>
+      <div class="main-content">
+        <div class="content-header">
+          <img class="logo" src="images/brand.png" alt="Instagram Logo - a camera with Instagram name beside it">
+          <button class="login-btn">
+            <img src="images/home.png" alt="App Store icon">
+            <span class="login-text">Log in</span>
+          </button>
+        </div>
+        <div class="content">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share
+            your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="stores-btn">
+            <figure>
+              <img src="images/badge-iphone.png" alt="App Store icon with Download on the App Store written">
+            </figure>
+            <figure>
+              <img src="images/badge-android.png" alt="Play Store icon with Get it on Google Play written">
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <footer>
+    <nav>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+      </ul>
+      <span class="trendmark">&copy; 2014 Instagram</span>
 
-  Oh yeah, did we mention it's free?
+    </nav>
+  </footer>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
