--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>Instagram</title>
+  </head>
+  <body>
+    <div class="bg">
+      <section class="section">
+        <div class="image">
+          <figure>
+            <img src="images/phones.png" alt="Phones" />
+          </figure>
+        </div>
+        <div class="content">
+          <div class="header">
+            <figure>
+              <img class="logo" src="images/brand.png" alt="Instagram Logo" />
+            </figure>
+            <a href="#" class="home-btn"
+              ><img src="images/home.png" alt="Home Icon" />Log in</a
+            >
+          </div>
+          <div class="frame-bg">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+              Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+              friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <figure class=>
+              <img class="store-images" src="images/badge-iphone.png" alt="Badge iPhone" />
+              <img class="store-images" src="images/badge-android.png" alt="Badge Android" />
+            </figure>
+          </div> 
+        </div>
+      </section>
+      <footer>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+    </div>
+  </body>
 </html>
