--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css"  href="../starter-code/css/main.css" />
 </head>
 <body>
-  Instagram
+  
+  <section id="container">
 
-  Capture and Share the World's Moments
+    <div id="telefones"><img src="./images/phones.png">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div id="center">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    </div>
+    
+    <div id="lateral">
+        <div id="login">
+          <img src="images/brand.png" alt="Instagram logo">
+          <button type="button"><img src="./images/home.png">Log in</button>
+        </div>
+      <div id="sub-lateral-div">
+        <div id="bodytext">
+          <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+        </div>
+      
+        <div id="download-div">
+          <buttom type="buttom"> <img src="./images/badge-iphone.png" alt="Download on the App Store"></buttom>
+          <buttom type="buttom"> <img src="./images/badge-android.png" alt="Get it on Google Play"></buttom>
+        </div>
+      </div>
+    </div>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </section>
+  <footer id="footer">
+    <nav>
+        <ul>
+          <li><a href="#">ABOUT US</a></li>
+          <li><a href="#">SUPPORT</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">PRESS</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">JOBS</a></li>
+          <li><a href="#">PRIVACY</a></li>
+          <li><a href="#">TERMS</a></li>
+          <li>&copy; 2014 INSTAGRAM</li>
+        </ul>
+    </nav>
+  </footer>
 </body>
 </html>
